# wimm

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  tarpaulin-report.html  tarpaulin.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: coverage-drop.md
.github/workflows/: rust.yml
docs/: COVERAGE.md  configuration.md
scripts/: check-coverage.sh
src/: cli.rs  config.rs  lib.rs  main.rs  types.rs
src/input/: mod.rs
src/storage/: mod.rs
src/tasks/: mod.rs
src/time_tracking/: mod.rs
src/ui/: app.rs  events.rs  help_panel.rs  input_bar.rs  layout.rs  mod.rs  task_list.rs
tests/: integration_tests.rs
wimm_cli/: Cargo.toml
wimm_cli/src/: cli.rs  main.rs
wimm_core/: Cargo.toml
wimm_core/src/: app.rs  db.rs  error.rs  lib.rs  model.rs
