[package]
name = "wimm"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "WIMM (Where is my mind) - A terminal-based task management application"
repository = "https://github.com/your-username/wimm"
keywords = ["cli", "task-management", "productivity", "terminal", "tui"]
categories = ["command-line-utilities"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
directories = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.0"
